2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * gw/urltrans.c: fixed comment block for new account %o escape code. 
      Thanks to the eagle'd eyes of Alex. :p
    * gw/smsc/smsc_http.c: added credits to Alex for his improvements to the
      code and fixes.

2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_http.c: fixing 3united (formerly Xidris) HTTP interface for
      binary MT messages. We passed URL-encoced binary string, but server side 
      expected HEX encoded (2 char per byte) version.

2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * gw/urltrans.c: added a fix by Alex that prevents panic'ing while msg text
      is NULL and adding '%o' as escape code for MO msgs representing the 
      msg->sms.account field. Which is interpreted as the operator ID for 
      aggregator specific MO messages. ie. Xidris HTTP SMSC module. Thanks
      to Tobias for this.

2004-09-27  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_http.c: fixed a binary MT bug (when DC_8BIT ahs been set) and
      various improvements for passing parameters to the HTTP request. Added
      credits to Tobias Weber <weber@wapme.de> who did improvements on the code.

2004-09-27 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed stupid bug that dlr lookup was
      made with source instead of destination address (in dlr
      source and destination switched).

2004-09-25 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-rwlock.c, gw/smsc/smsc_at.h: fixed compiler warnings.

2004-09-18 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: added new function 'at2_error_string' and teached
      smsc_at to use it.
      Thanks to almado.de for provided patch!

2004-09-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/xmlrpc.c: fixed memory leak.

2004-09-10 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwlib.h: added 'gw-prioqueue.h'. fixed compile error.

2004-09-08 Alexander Malysh <amalysh at kannel.org>